fix: configure Spring components properly
- Add Spring annotations (@Service, @Component) to parser components
- Fix TestParsingExecutor constructor
- Add missing parseTest method to TestParser

This commit fixes dependency injection configuration for parser
components and completes the parsing service structure.